# ProjetSVG

./: .gitignore  CMakeLists.txt  Makefile  README1.md  README2.md  README3.md  Rapport D'avancement.md  Suivi du projet | TRELLO.desktop  moteur  moteur.cpp  start_client_graphique
cbor11/: cbor11.cpp
client/: Makefile  README.md  client  client.cpp  client.hpp  client_console.cpp  client_graphique.cpp  consoleClient.cpp  functions.cpp  functions.h  functions.hpp  gtk_wrappers.cpp  launcher.cpp  view.cpp
client/Exceptions/: udpSendingException.cpp  udpSendingException.h
client/include/: client.hpp  client_console.hpp  client_graphique.hpp  consoleClient.hpp  functions.hpp  iClient.hpp  view.hpp
client/resources/: client_xml.glade
client/test_gtk/: Makefile  client_graphique.cpp  gtk_wrappers.cpp  main.cpp
demo/: Makefile  main.cpp
erreur/: erreur.cpp  erreur.hpp
exceptions/: erreurException.cpp  erreurException.hpp  udpAdresseConvertionException.cpp  udpAdresseConvertionException.h  udpBindsException.cpp  udpBindsException.h  udpBindsException.hpp  udpConnectionException.cpp  udpConnectionException.h  udpConnectionException.hpp  udpReceiveException.cpp  udpReceiveException.h  udpRuntimeException.cpp  udpRuntimeException.h  udpSendingException.cpp
exceptions/include/: udpAdresseConvertionException.hpp  udpReceiveException.hpp  udpSendingException.hpp
serveur/: Makefile  dataparser.cpp  dataparser.hpp  event.cpp  gtk_drawing.cpp  maintest.cpp  message.cpp  message.hpp  moteur  moteur.cpp  serveur.cpp  serveur.hpp  window.cpp  window.hpp
serveur/config/: colors.cfg  types.cfg
serveur/include/: dataparser.hpp  event.hpp  message.hpp  serveur.hpp  window.hpp
test/: main  main.cpp
test/test2/: builder.ui  main
test/test2/test3/: Makefile  exampleapp.cpp  exampleapp.hpp  exampleappwin.cpp  exampleappwin.hpp  main.cpp
testClientServeur/: Makefile  client  client.cpp  server.cpp
